[project]
name = "ultravox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.5",
    "librosa>=0.10.2.post1",
    "llvmlite>=0.43.0",
    "numpy>=2.0.2",
    "peft>=0.13.2",
    "pydub>=0.25.1",
    "python-multipart>=0.0.19",
    "ruff>=0.8.0",
    "scipy>=1.14.1",
    "sounddevice>=0.5.1",
    "torch>=2.5.1",
    "transformers>=4.46.3",
    "uvicorn>=0.32.1",
]
